Fix #22