@@ -1,31 +1,15 @@
-# Caches dependencies so that subsequent Docker builds only redownload dependencies if the build files change.
-FROM gradle:6.0.1-jre8 AS cache
+FROM gradle:6.0.1-jdk8 AS builder
 COPY build.gradle.kts gradle.properties settings.gradle.kts ./
 RUN gradle --no-daemon --refresh-dependencies
-
-FROM gradle:6.0.1-jdk8 AS builder
-COPY --from=cache /home/gradle/.gradle /home/gradle/.gradle
-COPY . .
+COPY src/main/ src/main/
 RUN gradle --no-daemon shadowJar
 
 FROM openjdk:jre-alpine
-RUN apk --no-cache add curl
 COPY --from=builder /home/gradle/build/libs/*.jar crystal-skull-all.jar
 COPY --from=builder /home/gradle/build/resources/main src/main/resources
+COPY wait-for-it.sh .
 EXPOSE 80
+# bash is used by wait-for-it.sh.
+RUN apk --no-cache add bash curl
 HEALTHCHECK --timeout=5s --start-period=5s --retries=1 \
-    CMD curl -f http://localhost:$PORT/health_check
-CMD [ \
-    "java", \
-    "-server", \
-    "-XX:+UnlockExperimentalVMOptions", \
-    "-XX:+UseCGroupMemoryLimitForHeap", \
-    "-XX:InitialRAMFraction=2", \
-    "-XX:MinRAMFraction=2", \
-    "-XX:MaxRAMFraction=2", \
-    "-XX:+UseG1GC", \
-    "-XX:MaxGCPauseMillis=100", \
-    "-XX:+UseStringDeduplication", \
-    "-jar", \
-    "crystal-skull-all.jar" \
-]
+    CMD curl -f http://localhost:80/health_check
